{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 22,
  "lineage": "5125ed8d-3815-c8b8-a7d7-6665b75f0e13",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:network-acl/acl-020672029e4893e09",
            "default_network_acl_id": "acl-020672029e4893e09",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-020672029e4893e09",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "354220933236",
            "subnet_ids": [
              "subnet-012ca896ad474f5cf",
              "subnet-0253cbda4f7ad7ccf",
              "subnet-063f5d89de87f034c",
              "subnet-0745d3586394bbb36"
            ],
            "tags": {
              "Name": "ecs_vpc_default_nacl"
            },
            "tags_all": {
              "Name": "ecs_vpc_default_nacl"
            },
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02eefc8ded1027eac",
            "domain": "vpc",
            "id": "eipalloc-02eefc8ded1027eac",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-168-57-253.compute-1.amazonaws.com",
            "public_ip": "35.168.57.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:internet-gateway/igw-06cbc6ccc0fcc9704",
            "id": "igw-06cbc6ccc0fcc9704",
            "owner_id": "354220933236",
            "tags": {
              "Name": "ecs_vpc_internet_gateway"
            },
            "tags_all": {
              "Name": "ecs_vpc_internet_gateway"
            },
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02eefc8ded1027eac",
            "connectivity_type": "public",
            "id": "nat-002d0a58f01aae7a8",
            "network_interface_id": "eni-0a84a4065f4178bed",
            "private_ip": "10.6.1.51",
            "public_ip": "35.168.57.253",
            "subnet_id": "subnet-0745d3586394bbb36",
            "tags": {
              "Name": "ecs_vpc_nat_gateway"
            },
            "tags_all": {
              "Name": "ecs_vpc_nat_gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.vpc_nat_gateway_eip",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:route-table/rtb-0abfc07402055b130",
            "id": "rtb-0abfc07402055b130",
            "owner_id": "354220933236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cbc6ccc0fcc9704",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_vpc_public_route_table"
            },
            "tags_all": {
              "Name": "ecs_vpc_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd459c13ab79d6af",
            "route_table_id": "rtb-0abfc07402055b130",
            "subnet_id": "subnet-0745d3586394bbb36"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7e005a618a8fe8c",
            "route_table_id": "rtb-0abfc07402055b130",
            "subnet_id": "subnet-0253cbda4f7ad7ccf"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:subnet/subnet-012ca896ad474f5cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.6.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012ca896ad474f5cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354220933236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc_private_subnet_1"
            },
            "tags_all": {
              "Name": "ecs_vpc_private_subnet_1"
            },
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:subnet/subnet-063f5d89de87f034c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.6.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063f5d89de87f034c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354220933236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc_private_subnet_2"
            },
            "tags_all": {
              "Name": "ecs_vpc_private_subnet_2"
            },
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:subnet/subnet-0745d3586394bbb36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.6.1.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0745d3586394bbb36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354220933236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc_public_subnet_1"
            },
            "tags_all": {
              "Name": "ecs_vpc_public_subnet_1"
            },
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:subnet/subnet-0253cbda4f7ad7ccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.6.1.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0253cbda4f7ad7ccf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354220933236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc_public_subnet_2"
            },
            "tags_all": {
              "Name": "ecs_vpc_public_subnet_2"
            },
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:vpc/vpc-0b0c76750b5bdeb1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.6.0.0/16",
            "default_network_acl_id": "acl-020672029e4893e09",
            "default_route_table_id": "rtb-0c7dc1489fbbe51cb",
            "default_security_group_id": "sg-0ffdb6a7f46a9dc26",
            "dhcp_options_id": "dopt-0a8106fe2e133cfa9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b0c76750b5bdeb1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7dc1489fbbe51cb",
            "owner_id": "354220933236",
            "tags": {
              "Name": "ecs_vpc"
            },
            "tags_all": {
              "Name": "ecs_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:security-group/sg-0516cbc295138d736",
            "description": "Application Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0516cbc295138d736",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Access On Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Access On Port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "354220933236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354220933236:security-group/sg-08f8d988a68a510da",
            "description": "ECS Task Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f8d988a68a510da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0516cbc295138d736"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ECS Security Group",
            "name_prefix": "",
            "owner_id": "354220933236",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0c76750b5bdeb1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}